--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="menu">
             <div class="icons">
-                <img src="img/Path.svg">
-                <img src="https://cdn0.iconfinder.com/data/icons/internet-2020/1080/twitter-1024.png" height="40px" width="40px"></div>
+                <img src="img/Path.svg" class="facebook">
+                <img src="https://www.hdm-stuttgart.de/mediathek/static/media/twitter_logo.893c5e33.png" height="20px" width="20px"></div>
             <div class="logo">MITRAVEL</div>
-            <div> <img src="https://cdn3.iconfinder.com/data/icons/basic-ui-elementssky-blue/177/list-1024.png" width="40px" height="40px"></div>
+            <div> <img src="https://www.clipartmax.com/png/full/94-940125_colorado.png" width="35px" height="35px"></div>
         </div>
     </header>
 </body>
