--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,8 +15,20 @@
                 <img src="img/Path.svg" class="facebook">
                 <img src="https://www.hdm-stuttgart.de/mediathek/static/media/twitter_logo.893c5e33.png" height="20px" width="20px"></div>
             <div class="logo">MITRAVEL</div>
-            <div> <img src="https://www.clipartmax.com/png/full/94-940125_colorado.png" width="35px" height="35px"></div>
+            <img src="https://www.clipartmax.com/png/full/94-940125_colorado.png" width="35px" height="35px" class="img_menu">
+        </div>
+        <div class="main">
+            <div class="article">NEW ARTICLE</div>
+            <div class="main-text">Mother Earth <br>Hosts Our<br> Travels</div>
+            <div class="secondary-text">There are not many cities that have experienced such social and political<br> extremes in recent history as Amsterdam. In the 20th century alone,<br> Amsterdam faced the atrocities of war for the first time in 400 years, became<br> the radical center of 1960s social movements and witnessed a complete </div>
+            <a class=" btn btn-danger red" id="info">BUY THE BOOK</a>
+            <div class="search">
+            <div>Search stories</div>
+            <img src="img/search.svg">
+            </div>
         </div>
     </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
+
 </html>
