--- a/index.html
+++ b/index.html
@@ -23,11 +23,28 @@
             <div class="secondary-text">There are not many cities that have experienced such social and political<br> extremes in recent history as Amsterdam. In the 20th century alone,<br> Amsterdam faced the atrocities of war for the first time in 400 years, became<br> the radical center of 1960s social movements and witnessed a complete </div>
             <a class=" btn btn-danger red" id="info">BUY THE BOOK</a>
             <div class="search">
-            <div>Search stories</div>
-            <img src="img/search.svg">
+            <div class="text-stories">Search stories</div>
+            <img src="img/search.svg" width="18px" height="18px">
             </div>
         </div>
     </header>
+    <div class="section-1">
+        <div class="travel-pro">Become A Travel Pro In <br>One Easy Lesson</div>
+    </div>
+    <div class="cards">
+      <div class="card" style="width: 18rem;">
+          <img src="img/Group 4.jpg" class="card-img-top"  width="267px" height="451px">
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://www.vindor.ru/upload/iblock/399/3991727724557a87095dd75d5d408da9.jpg" class="card-img-top card-img" width="267px" height="451px">
+          </div>
+        <div class="card" style="width: 18rem;">
+          <img src="img/Mask Group.jpg" class="card-img-top"  width="267px" height="451px">
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="img/Mask Group (1).jpg" class="card-img-top"  width="267px" height="451px">
+        </div>
+     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
