--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
           <img src="img/Mask Group (1).jpg" class="card-img-top"  width="267px" height="451px">
         </div>
      </div>
+     <section class="section-2">
+        <div class="sec-2">
+          <div class="featured">
+            <a class=" btn btn-danger red" id="feature">FEATURED</a>
+            <div class="fly">How To Fly A Private Jet<br> On Your Next Trip</div>
+            <div class="text-after">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon<br> National Park ranks as three of the most magnificent & awe inspiring.</div>
+            <a class="btn btn-info blue">READ ARTICLE</a>
+          </div>
+          <div class="featured-story">
+            <div class="story">Featured Story</div>
+          </div>
+        </div>
+     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
