--- a/index.html
+++ b/index.html
@@ -54,7 +54,49 @@
             <a class="btn btn-info blue">READ ARTICLE</a>
           </div>
           <div class="featured-story">
-            <div class="story">Featured Story</div>
+            <div class="story">Featured <br>Story</div>
+            <div class="story-ppl">
+              <div class="ppl">
+                <div class="ppl-img">
+                  <img src="img/Avatar.png" width="38px" height="38px">
+                </div>
+                <div class="ppl-text">
+                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-sec">13 Dec 2019</div>
+                  <hr>
+                </div>
+              </div>
+              <div class="ppl">
+                <div class="ppl-img">
+                  <img src="img/Avatar (1).png" width="38px" height="38px">
+                </div>
+                <div class="ppl-text">
+                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-sec">13 Dec 2019</div>
+                  <hr>
+                </div>
+              </div>
+              <div class="ppl">
+                <div class="ppl-img">
+                  <img src="img/Avatar (2).png" width="38px" height="38px">
+                </div>
+                <div class="ppl-text">
+                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-sec">13 Dec 2019</div>
+                  <hr>
+                </div>
+              </div>
+              <div class="ppl">
+                <div class="ppl-img">
+                  <img src="img/Avatar (3).png" width="38px" height="38px">
+                </div>
+                <div class="ppl-text">
+                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-sec">13 Dec 2019</div>
+                  <hr>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
      </section>
