--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <img src="img/Avatar (1).png" width="38px" height="38px">
                 </div>
                 <div class="ppl-text">
-                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-main">From Wetlands To Canals And <br>Dams Amsterdam Is Alive</div>
                   <div class="ppl-sec">13 Dec 2019</div>
                   <hr>
                 </div>
@@ -81,7 +81,7 @@
                   <img src="img/Avatar (2).png" width="38px" height="38px">
                 </div>
                 <div class="ppl-text">
-                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-main">Stu Unger Rise And Fall Of A Poker<br> Genius</div>
                   <div class="ppl-sec">13 Dec 2019</div>
                   <hr>
                 </div>
@@ -91,9 +91,8 @@
                   <img src="img/Avatar (3).png" width="38px" height="38px">
                 </div>
                 <div class="ppl-text">
-                  <div class="ppl-main">Do A Sporting Stag Do In<br> Birmingham</div>
+                  <div class="ppl-main">New Ideas For A Low Cost Vacation<br> On Water</div>
                   <div class="ppl-sec">13 Dec 2019</div>
-                  <hr>
                 </div>
               </div>
             </div>
