--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
           </div>
         </div>
      </section>
+     <div class="section-4">
+      <div class="video">
+        <div class="f-v">Featured Videos</div>
+        <div class="f-sv">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce <br>Canyon National Park ranks as three of the most magnificent & awe inspiring.</div>
+      </div>
+      <div class="rocky-mountary">
+        <img class="sea" src="img/Mask Group (3).jpg">
+        <div class="group-m">
+          <img class="mountain" src="img/Mask Group (4).jpg">
+          <img class="button-m" src="img/Video icon.png">
+        </div>
+        <img class="desert" src="img/Mask Group.png">
+      </div>
+     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
