--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
         <div class="f-sv">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce <br>Canyon National Park ranks as three of the most magnificent & awe inspiring.</div>
       </div>
       <div class="rocky-mountary">
-        <img class="sea" src="img/Mask Group (3).jpg">
+        <img class="sea" src="img/Mask Group (3).jpg" width="626px" height="413px">
         <div class="group-m">
-          <img class="mountain" src="img/Mask Group (4).jpg">
+          <img class="mountain" src="img/Mask Group (4).jpg" width="835px" height="559px">
           <img class="button-m" src="img/Video icon.png">
+          <div class="text-m">A Guide To Rocky Mountain Vacations</div>
         </div>
-        <img class="desert" src="img/Mask Group.png">
+        <img class="desert" src="img/Mask Group.png" width="510px" height="410px">
       </div>
      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
