--- a/index.html
+++ b/index.html
@@ -114,6 +114,25 @@
         <img class="desert" src="img/Mask Group.png" width="510px" height="410px">
       </div>
      </div>
+     <nav class="sign">
+       <div class="img-m">
+        <div class="sign-up">
+          <div class="text-s">Sign Up Our<br> Newsletter</div>
+          <div class="sm-text-s">The state of Utah in the United States is home to<br> lots of beautiful National Parks, & Bryce Canyon <br>National Park ranks as three of the most<br> magnificent.</div>
+        </div>
+        <div class="email">
+          <ul class="list-group">
+            <li class="list-group">EMAIL</li>
+            <hr class="gray">
+            <li class="list-group">EMAIL</li>
+            <hr class="gray">
+            <li class="list-group">PHONE NUMBER</li>
+            <hr class="gray">
+          </ul>
+          <div class="list-group-1 blue" aria-current="true">SIGN UP NOW</div>
+        </div>
+      </div>
+     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
