--- a/index.html
+++ b/index.html
@@ -133,6 +133,107 @@
         </div>
       </div>
      </nav>
+     <div class="inspiration">
+        <div class="txt-insp">
+          <div class="insp">Inspirations</div>
+          <div class="sm-insp">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce<br> Canyon National Park ranks as three of the most magnificent & awe inspiring.</div>
+        </div>
+        <div class="blog-1">
+          <div class="group-bl">
+            <img src="img/Mask Group (13).jpg" width="905px" height="500px">
+          <div class="tx-bl-1 1-1">DESTINATIONS</div>
+          <div class="tx-sm-bl-1">A Guide To Rocky Mountain Vacations</div>
+          <div class="feature-bl">FEATURED</div>
+          </div>
+          <div class="mask-group">
+            <img src="img/Mask Group (7).jpg" class="mask-7" height="500px">
+          <div class="tx-bl-1-2">DESTINATIONS</div>
+          <div class="barselona">Traveling To Barcelona</div>
+          <img src="img/Frame 1.svg" class="frame-2">
+          </div>
+        </div>
+        <div class="blog-2">
+          <div class="beach">
+            <img src="img/Mask Group (8).jpg" width="460px" height="500px">
+            <div class="text-beach">DESTINATIONS</div>
+            <div class="b-text-beach">Party Jokes Startling But<br> Unnecessary</div>
+          </div>
+          <div class="air">
+            <img src="img/Mask Group (9).jpg" width="460px" height="500px">
+            <div class="air-text">Maui By Air The Best Way<br> Around The Island</div>
+          </div>
+          <div class="couple">
+            <img src="img/Mask Group (10).jpg" width="460px" height="500px" class="mask-10">
+            <div class="text-coup">ANDRE GIDE</div>
+            <div class="b-text-coip">Man cannot discover<br> new oceans unless he<br> has the courage to lose<br> sight of the shore.</div>
+          </div>
+        </div>
+        <div class="blog-3">
+          <div class="forest">
+            <img src="img/Mask Group (11).jpg">
+            <img src="img/Frame 1.svg" class="f-frame">
+            <div class="text-f">DESTINATIONS</div>
+            <div class="sm-text-f">Traveling To Barcelona</div>
+          </div>
+          <div class="sea-bl">
+            <img src="img/Mask Group (12).jpg" width="905px" height="500px">
+            <div class="feature-sea">FEATURED</div>
+            <div class="sea-text">A Guide To Rocky Mountain Vacations</div>
+          </div>
+        </div>
+     </div>
+     <hr class="gray-1">
+     <footer class="footer">
+      <div class="company">
+        <div class="text-cp">COMPANY</div>
+        <hr class="green">
+        <div class="bl-comp">
+          <div class="text-gray">About</div>
+          <div class="text-gray">Press</div>
+          <div class="text-gray">Blog</div>
+          <div class="text-gray">Careers</div>
+          <div class="text-gray">Security</div>
+          <div class="text-gray">Driver Center</div>
+        </div>
+      </div>
+      <div class="company">
+        <div class="text-cp">INFORMATION</div>
+        <hr class="green">
+        <div class="bl-comp">
+          <div class="text-gray">Our story</div>
+          <div class="text-gray">Recipes</div>
+          <div class="text-gray">Nutrition</div>
+          <div class="text-gray">Resources</div>
+          <div class="text-gray">Newsletter</div>
+          <div class="text-gray">Contact</div>
+        </div>
+      </div>
+      <div class="company">
+        <div class="text-cp">INFORMATION</div>
+        <hr class="green">
+        <div class="bl-comp">
+          <div class="text-gray">Customer service</div>
+          <div class="text-gray">Reccomend a restaurant</div>
+          <div class="text-gray">Sign up a restaurant</div>
+          <div class="text-gray">Jobs</div>
+          <div class="text-gray">Press</div>
+          <div class="text-gray">Terms of use</div>
+        </div>
+      </div>
+      <div class="reg-f">
+        <div class="text-cp">SUBSCRICE NOW</div>
+        <hr class="green">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <img src="img/user.png" width="24px" height="24px" class="user-img">
+        </form>
+        <div class="btn-f">SUBSCRICE NOW</div>
+      </div>
+     </footer>
+     <hr class="gray-1 g-2">
+     <div class="footer-after">
+      <div class="last-text">© 2019 Mass Impressions. Designed by Tran Mau Tri Tam for Mass Impressions. All rights reserved.</div>
+     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
